hard-gists/20336/run.log
=== Docker Run Log for 20336 ===
Started at: Mi 29. Okt 12:57:52 CET 2025

[2025-10-29 12:57:52] START: Running container for 20336
[2025-10-29 12:57:52] SUCCESS: Container 11be4f44a7f1026a38ddb19f52eceae8c078951bb72ed3812d661c91f3eb225e started for 20336
=== Container logs for 20336 ===
  File "/snippet.py", line 15
    print '%s %s a porn image.'%(fn, 'is' if cnt > w * h * 0.3 else 'is not')
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 20336 ===
[2025-10-29 12:57:54] INFO: Container 11be4f44a7f1026a38ddb19f52eceae8c078951bb72ed3812d661c91f3eb225e has stopped
